--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^2.7.7",
-    "vue-router": "^3.5.4"
+    "material-design-icons": "^3.0.1",
+    "path": "^0.12.7",
+    "vue-router": "^3.5.4",
+    "vuetify": "^2.5.10"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
@@ -26,6 +28,7 @@
     "jsdom": "^20.0.0",
     "postcss": "^8.4.16",
     "prettier": "^2.5.1",
+    "sass": "^1.55.0",
     "tailwindcss": "^3.1.8",
     "terser": "^5.14.2",
     "unplugin-vue-components": "^0.22.7",
