--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuetify": "^2.5.10"
   },
   "devDependencies": {
+    "@mdi/font": "^7.0.96",
     "@rushstack/eslint-patch": "^1.1.0",
     "@vitejs/plugin-legacy": "^2.0.0",
     "@vitejs/plugin-vue2": "^1.1.2",
