Add delete contact

--- a/backend/arrenda-backend/serverless.yml
+++ b/backend/arrenda-backend/serverless.yml
@@ -26,13 +26,13 @@ functions:
     handler: src/functions/contacts.addContact
     events:
       - httpApi:
-          path: /contact
+          path: /contacts
           method: post
   getContact:
     handler: src/functions/contacts.getContact
     events:
       - httpApi:
-          path: /contact/{id}
+          path: /contacts/{id}
           method: get
   getAllContacts:
     handler: src/functions/contacts.getAllContacts
@@ -40,6 +40,18 @@ functions:
       - httpApi:
           path: /contacts
           method: get
+  updateContact:
+    handler: src/functions/contacts.updateContact
+    events:
+      - httpApi:
+          path: /contacts/{id}
+          method: put
+  deleteContact:
+    handler: src/functions/contacts.deleteContact
+    events:
+      - httpApi:
+          path: /contacts/{id}
+          method: delete
 resources:
   # DynamoDB
   - ${file(./yml/DynamoDB.yml)}
