--- a/backend/arrenda-backend/package.json
+++ b/backend/arrenda-backend/package.json
@@ -12,6 +12,8 @@
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
     "aws-sdk": "^2.1224.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
     "uuid": "^9.0.0"
   }
 }
