--- a/backend/arrenda-backend/yml/DynamoDB.yml
+++ b/backend/arrenda-backend/yml/DynamoDB.yml
@@ -17,11 +17,11 @@ Resources:
     Properties:
       TableName: userTable
       AttributeDefinitions:
-        - AttributeName: id
+        - AttributeName: email
           AttributeType: S
       KeySchema:
-        - AttributeName: id
+        - AttributeName: email
           KeyType: HASH
       ProvisionedThroughput:
-        ReadCapacityUnits: 1
-        WriteCapacityUnits: 1
+        ReadCapacityUnits: 3
+        WriteCapacityUnits: 3
